<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.moveup.MainActivity">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_logo_home_new"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_graph"
        android:title="@string/title_graph" />
    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_exercise"
        android:title="@string/title_exercise"/>
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting"/>






</menu>